Fix: Disable PurgeCSS, CSS on Mobile

--- a/assets/sass/base/helpers.sass
+++ b/assets/sass/base/helpers.sass
@@ -23,10 +23,10 @@ h3, .h3
   opacity: 0.7
 
 .row
-  @apply tw-flex tw-mb-8
-
-  & :not(:last-child)
-    @apply tw-mr-2
+  @apply tw-flex tw-flex-wrap tw-mb-8
 
   .column
-    @apply tw-flex-1
+    @apply tw-w-full tw-mb-4
+
+    @screen md
+      @apply tw-w-1_2
