--- a/assets/sass/layout/container.sass
+++ b/assets/sass/layout/container.sass
@@ -1,5 +1,8 @@
 .container
   @apply tw-px-4
 
-  @screen sm
+  @screen md
+    @apply tw-px-16
+
+  @screen lg
     @apply tw-px-40
